2015-02-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* errors.c: New file.
	(line_error, line_errorf, dump_errors): New functions.
	* end_line.c (parse_line_command_args) <@sp>: Call line_errorf 
	if argument is malformed.

	* Parsetexi/lib/Parsetexi.pm (parse_texi_file): Fetch error 
	messages.

	* dump_perl.c (dump_line_nr): Arguments changed.
	* test-files/error.texi: New test file.

2015-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* command_data.txt: Specify argument types of the other "misc" 
	commands.
	* end_line.c (parse_line_command_args): More complete 
	implementation.
	* parser.c (digit_chars): New variable.

2015-01-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (end_line_misc_line): Set "misc_content" key as 
	intended, instead of "misc_args".
	<sectioning commands>: Set "level" extra value.
	* handle_commands.c (handle_misc_command): Add comment.

	* command_data.txt: Add "sectioning" flag for sectioning 
	commands.  Add "majorheading".  Say that "@printindex" takes 1 
	argument.
	* end_line.c (parse_line_command_args) <printindex>: Handle.

	* Parsetexi/lib/Parsetexi.pm (_add_parents): Set 'level' value 
	on elements.

2015-01-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (end_line_starting_block, end_line_misc_line): 
	Split functions out of end_line.

2015-01-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* dump_perl.c: In all functions, output to a TEXT object instead 
	of printing to standard output.
	* parser.c (parse_texi_file): Return type changed.

	* dump_perl.c, Parsetexi/Parsetexi.xs (dump_tree_to_string_1)
	(dump_tree_to_string_2, dump_tree_to_string_3)
	(dump_root_element_1, dump_root_element_2): New functions.
	* Parsetexi/lib/Parsetexi.pm: Call XSUB parse_file and then 
	these new functions, instead of capturing output of separate 
	"parsetexi" executable.  Get and eval data from each 
	node/top-level element separately, which is faster than eval-ing 
	a dump of the the entire dump at once.
