@@ -3,3 +3,13 @@
 @sp xxx
 @sp 1212
 @sp 1212yyy
+
+@multitable @columnfractions 1.2 .2 0.22 xx 2x.2 2.x 2.23x 9
+@end multitable
+
+@synindex ab ac
+@synindex ! xscd
+@synindex , @
+@syncodeindex lllllll
+
+@everyheadingmarks banana
